ignore cassandra in tests if its unavailable
* ignore cassandra in tests if its unavailable

* restore embedded cassandra but have tests skipped on failure

* look for local cassandra before embedded

* formatting

* removed commented out adaptor test

Co-authored-by: Leif Warner <abimelech@gmail.com>
GitOrigin-RevId: f9679d6fab30e99f0acb6ae8780c2faa330a0fe5