@@ -1,10 +1,14 @@
 package com.thatdot.quine.persistor
 
 import java.net.{InetSocketAddress, Socket}
+import java.time.Duration
+
+import scala.util.Try
 
 import akka.actor.ActorSystem
 
 import com.datastax.oss.driver.api.core.DefaultConsistencyLevel
+import com.github.nosan.embedded.cassandra.{Cassandra, CassandraBuilder, WorkingDirectoryDestroyer}
 import com.typesafe.scalalogging.LazyLogging
 import org.scalatest.time.SpanSugar.convertIntToGrainOfTime
 
@@ -12,10 +16,10 @@ import com.thatdot.quine.persistor.cassandra.vanilla.CassandraPersistor
 
 class CassandraPersistorSpec extends PersistenceAgentSpec {
 
-  val cassandraInstance: CassandraTestInstance[PersistenceAgent] = new CassandraTestInstance[PersistenceAgent]() {
-    override def buildFromAddress(inetSocketAddress: Option[InetSocketAddress]): PersistenceAgent =
-      inetSocketAddress match {
-        case Some(addr) =>
+  val cassandraWrapper: CassandraInstanceWrapper[CassandraPersistor] =
+    new CassandraInstanceWrapper[CassandraPersistor]() {
+      override def buildFromAddress(inetSocketAddress: Option[InetSocketAddress]): Option[CassandraPersistor] =
+        inetSocketAddress map { addr =>
           new CassandraPersistor(
             PersistenceConfig(),
             keyspace = "quine",
@@ -31,16 +35,17 @@ class CassandraPersistorSpec extends PersistenceAgentSpec {
             metricRegistry = None,
             snapshotPartMaxSizeBytes = 1000
           )
+        }
+    }
 
-        case _ =>
-          logger.warn("Running InMemoryPersistor instead of Cassandra because it was not runnable.")
-          InMemoryPersistor.empty
-      }
-
+  override def afterAll(): Unit = {
+    super.afterAll()
+    cassandraWrapper.stop()
   }
 
-  lazy val persistor: PersistenceAgent = cassandraInstance.persistor
+  lazy val persistor: PersistenceAgent = cassandraWrapper.instance.getOrElse(InMemoryPersistor.empty)
 
+  override def runnable: Boolean = persistor.isInstanceOf[CassandraPersistor]
 }
 
 /** Wrap a test instance of cassandra.
@@ -50,7 +55,7 @@ class CassandraPersistorSpec extends PersistenceAgentSpec {
   * address and port
   * - If that fails will default to InMemoryPersistor
   */
-abstract class CassandraTestInstance[T](implicit val system: ActorSystem) extends LazyLogging {
+abstract class CassandraInstanceWrapper[T](implicit val system: ActorSystem) extends LazyLogging {
 
   /* Embedded Cassandra may fail to run for a variety of reasons:
    *
@@ -58,7 +63,24 @@ abstract class CassandraTestInstance[T](implicit val system: ActorSystem) extend
    *   - unsupported architecture
    */
 
-  def buildFromAddress(maybeAddress: Option[InetSocketAddress]): T
+  final lazy val embeddedCassandraTry: Try[Cassandra] = Try {
+    val cassandra = new CassandraBuilder()
+      .startupTimeout(Duration.ofMinutes(5))
+      .addJvmOptions( // Options to hopefully enable tests on as many
+        "-XX:+IgnoreUnrecognizedVMOptions",
+        "--add-opens=java.base/java.io=ALL-UNNAMED",
+        "--add-opens=java.base/java.util=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+        "--add-opens=java.base/java.nio=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+      )
+      .workingDirectoryDestroyer(WorkingDirectoryDestroyer.deleteAll()) // don't keep anything
+      .build()
+    cassandra.start()
+    cassandra
+  }
 
   /** Try to establish if there's a local cassandra available for testing. */
   private lazy val localCassandra: Boolean =
@@ -77,10 +99,18 @@ abstract class CassandraTestInstance[T](implicit val system: ActorSystem) extend
     if (localCassandra) {
       logger.warn(f"Using local Cassandra")
       Some(new InetSocketAddress("127.0.0.1", 9042))
+    } else if (sys.env.contains("CI") || embeddedCassandraTry.isSuccess) {
+      val settings = embeddedCassandraTry.get.getSettings
+      logger.warn(f"Using embedded cassandra settings: $settings")
+      Some(new InetSocketAddress(settings.getAddress, settings.getPort))
     } else {
+      logger.warn("Found no local or embedded cassandra to run tests with")
       None
     }
 
-  lazy val persistor: T = buildFromAddress(runnableAddress)
+  def stop(): Unit = embeddedCassandraTry.foreach(_.stop())
 
+  def buildFromAddress(address: Option[InetSocketAddress]): Option[T]
+
+  lazy val instance: Option[T] = buildFromAddress(runnableAddress)
 }
